--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
 	"miniprogramRoot": "dist/",
 	"projectname": "myAccount",
 	"description": "",
-	"appid": "touristappid",
+	"appid": "wx852077a670f2af88",
 	"setting": {
 		"urlCheck": true,
 		"es6": false,
